--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ $background-color: #f0f0f0;
 $text-color: #fff;
 $primary-color: #003366;
 $primary-color-overlay: rgba(0, 0, 0, 0.307) 6;
+$top-bar-height: 60px;
 
 .welcome-container {
   position: relative;
