--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 body {
   margin: 0;
   padding: 0;
+  background-color: #f5f5f4;
 }
